lessons/143-go-golang-vs-node-js-performance-benchmark/go-app/deploy/service-a/4-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: service-a
  namespace: golang
spec:
  parentRefs:
  - name: istio
    namespace: gateway
  hostnames: ["go-service-a.devopsbyexample.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: service-a
      port: 8080
